--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,8 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameInstanceClass=/Game/Blueprints/HG_GameInstance.HG_GameInstance_C
+GlobalDefaultGameMode=/Game/Blueprints/level1/L1_GameMode.L1_GameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
