--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -182,7 +182,7 @@ ShowUnusedLayers=True
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 PostProcessVolume=PostProcessVolume.Lens.Lens,BP_Interaction_LightSwitch_C.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.ItemData,PropertyWrapper.DefaultValueCategory.InventorySlots,
-BrushComponent=PostProcessVolume.Lens.Lens,BP_Interaction_LightSwitch_C.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.ItemData,PropertyWrapper.DefaultValueCategory.InventorySlots,
+BrushComponent=
 StaticMeshActor=PostProcessVolume.Lens.Lens,BP_Interaction_LightSwitch_C.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.ItemData,PropertyWrapper.DefaultValueCategory.InventorySlots,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartitionSetup.RuntimeHash,
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartitionSetup.RuntimeHash,
@@ -356,7 +356,7 @@ K2Node_BreakStruct=PostProcessVolume.Lens.Lens,BP_Interaction_LightSwitch_C.Tran
 LastLevel=/Game/maps/level1
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/UMG/Inventory/W_Inventory_DropDown.W_Inventory_DropDown
 OpenAssetsAtExit=/Game/UMG/Inventory/W_InventoryMenu.W_InventoryMenu
 OpenAssetsAtExit=/Game/UMG/Inventory/W_InventorySlots.W_InventorySlots
@@ -398,7 +398,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Textures/Inventory
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1872,7 +1872,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Layout.Slot\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
@@ -1994,9 +1994,9 @@ Texture2D="\"Object\" "
 Texture="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 W_MainHUD_C="\"Object\" "
-UserWidget="\"Object\" "
-Widget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Layout.Slot\" "
-Visual="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Layout.Slot\" "
+UserWidget="\"Object\" \"Object.Layout.Slot\" "
+Widget="\"Object\" \"Object.Layout.Slot\" "
+Visual="\"Object\" \"Object.Layout.Slot\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" "
 PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Layout.Slot\" "
 SizeBox="\"Object\" \"Object.Layout.Slot\" "
